# sftp-sync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: MEMORY.md  plan-ftp.md  plan-keyring.md  project-overview.md
.github/workflows/: release.yml
docs/: index.html  styles.css
docs/en/: index.html
docs/screenshots/: README.md
scripts/: changelog.mjs
src/: App.css  App.tsx  i18n.ts  main.tsx  types.ts  useSshSession.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  events.rs  ignore.rs  lib.rs  main.rs  notifications.rs  settings.rs  sftp.rs  ssh_shell.rs  sync.rs  system_terminal.rs  watcher.rs
