[package]
name = "sftp-sync"
version = "0.2.0"
description = "GUI multiplataforma de sincronización SFTP (alternativa nativa a la extensión SFTP de VS Code)"
authors = ["Marcos Esperón"]
edition = "2021"

[lib]
# El sufijo `_lib` evita un conflicto entre el nombre de la lib y el del binario en Windows.
name = "sftp_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH/SFTP puro en Rust (sin libssh2/openssl nativo)
russh = "0.54"
russh-sftp = "2"

# File watching multiplataforma (FSEvents / ReadDirectoryChangesW)
notify = "8"
notify-debouncer-full = "0.5"

# Glob estilo minimatch para los patrones `ignore`
globset = "0.4"

# Utilidades
anyhow = "1"
thiserror = "2"
walkdir = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
